<resources>
    <string name="app_name">Bakmi GM</string>
    <string name="nikmati">Nikmati penawaran menarik, poin, dan banyak lagi dengan program hadiah eksklusif Bakmi Gmania.
        Daftar Sekarang!</string>
    <string name="gabung">Gabung Sekarang</string>
    <string name="pilihbhs">Pilihan Bahasa</string>
    <string name="tullisanbakmigm">Bakmi GM</string>
    <string name="indo">Bahasa</string>
    <string name="ing">English</string>
    <string name="main">Permainan</string>
    <string name="not">Notifikasi</string>
    <string name="gbgmember">Bergabung menjadi Member</string>
    <string name="tan">Pertanyaan</string>
    <string name="sya">Syarat dan Ketentuan</string>
    <string name="syagm">Syarat dan Ketentuan Bakmi GM</string>
    <string name="kebijak">Kebijakan Privasi</string>
    <string name="hbg">Hubungi Kami</string>
    <string name="addre">Alamat</string>
    <string name="mail">E-mail</string>
    <string name="bkmimail">help@bgmania.bakmigm.com</string>
    <string name="keterangan1">Pengguna Aplikasi Bakmi GM ini menyetujui dan menerima persyaratan penggunaan Aplikasi seperti yang dapat direvisi oleh Bakmi GM dari waktu ke waktu, dan merupakan perjanjian yang mengikat antara Pengguna dan Bakmi GM. Dengan mengunduh atau menginstal Aplikasi Bakmi GM, Pengguna mengakui dan menyetujui untuk terikat oleh persyaratan ini. Jika Pengguna tidak setuju dengan persyaratan ini, Pengguna tidak setuju dengan Persyaratan ini, Pengguna tidak dapat menggunakan Aplikasi Bakmi GM ini.</string>
    <string name="keterangan2">Bakmi GM mengembangkan aplikasi ini sebagaimana mestinya dan pengguna menanggung sendiri semua resiko penggunaan Aplikasi ini. Bakmi GM berhak untuk menampilkan berbagai macam promosi dan segala macam bentuk iklan secara implisit dan explisit selama itu masih berada pada jalur hukum yang berlaku tanpa meminta persetujuan atau memberikan kompensasi kepada pengguna</string>
    <string name="ket2">Bakmi GM tidak bertanggung jawab atas biaya, kerusakan dan cacat yang disebabkan, kegagalan proses, gangguan, lamanya operasi dan transisi, virus atau kegagalan koneksi yang disebabkan performa pihak ke 2 atau ke 3. Bakmi GM tidak bertanggung jawab atas kerugian yang timbul dari kehilangan atau jika terjadi pencurian informasi pengguna yang dikirimkan atau disimpan pada perangkat atau berasal dari transaksi yang tidak sah atau penipuan yang terkait dengan Aplikasi. Aplikasi dan Konten dilindungi oleh hak cipta, merek dagang, paten, rahasia dagang, hukum dan hak kepemilikan lainnya, dan juga mungkin memiliki komponen keamanan yang melindungi informasi digital sebagaimana diizinkan oleh Bakmi GM atau pemilik Konten.</string>
    <string name="ket3">Bakmi GM memberikan pengguna lisensi pribadi yang bersifat non eksklusif, tidak dapat dipindah tangankan, terbatas dan dapat dibatalkan untuk menggunakan Aplikasi untuk menggunakan aplikasi untuk penggunaan pribadi dan tidak bersifat komersial yang terdapat pada perangkat android non tablet dan iphone. Aplikasi ini dimiliki dan dikendalikan oleh pengguna  yang sesuai dengan ketentuan Apple dan ketentuan Google.</string>
    <string name="ket4">Bakmi GM tidak mengizinkan pihak manapun dalam penggunaan aplikasi dengan cara lain, tanpa Batasan, jual-beli Aplikasi, transfer, modifikasi atau distribusi aplikasi atau teks, gambar, music, barcode, video, data hyperlink, dan konten yang terkait dengan aplikasi ini.</string>
    <string name="ket5">Ketentuan ini dapat berubah dan dilakukan pembaruan pada aplikasi yang ketentuan baru akan diterbitkan secara terpisah pada ketentuan lainnya. </string>
    <string name="ket6">Jika ada ketentuan dari ketentuan ini akan dianggap melanggar hukum, batal atau karena alas an apapun tidak dapat dilaksanakan, maka ketentuan yang akan dianggap terpisah dari ketentuan ini dan tidak mempengaruhi validitas dan keberlakuan dari ketentuan yang tersisa. </string>
    <string name="ketmain">Nikmati penawaran menarik, poin, dan banyak lagi dengan program hadiah eksklusif Bakmi GMania. Daftar sekarang!</string>
    <string name="boldguna">Penggunaan Aplikasi yang disarankan </string>
    <string name="ketguna">Pengguna telah menyetujui bahwa penggunaan Aplikasi ini dan Konten apa pun harus mematuhi Aplikasi ini dan Konten apa pun harus mematuhi ketentuan dan kebijakan yang dibuat oleh Bakmi GM. Pengguna dilarang menggunakan aplikasi ini untuk :</string>
    <string name="ketguna1">1.	Melecehkan, menyalahgunakan, mengintai, mengancam, mencemarkan hama baik atau melanggar hak public atau hak kepemilikan lainnya.</string>
    <string name="ketguna2">2.	Melanggar hukum yang berlaku di Indonesia.</string>
    <string name="ketguna3">3.	Melakukan penipuan menggunakan Aplikasi ini.</string>
    <string name="ketguna4">4.	Menggunakan atau meluncurkan sistem otomatis apapun seperti “robot”, “spiders”, atau “pembaca Offline” untuk mengakses Aplikasi ini.</string>
    <string name="ketguna5">5.	Memasukkan Virus atau kode komputer, file atau program yang akan mengganggu jalannya proses aplikasi atau fungsionalitas yang dimiliki oleh aplikasi serta mengganggu kondusifitas kerja perangkat telepon genggam.</string>
    <string name="boldinden">Indentifikasi</string>
    <string name="ketinden">Pengguna menyetujui untuk bertanggung jawab, mengganti kerugian, membayar denda, atas semua klaim, tuntutan, kerusakan, denda, dan kewajiban yang telah disebabkan oleh pengguna Aplikasi kepada pihak Bakmi GM. Bakmi GM berhak untuk melakukan pembelaan dan control ekslusif atas semua masalah yang melibatkan ganti rugi oleh pengguna Aplikasi. Jika pengguna melakukan pelanggaran hak kekayaan intelektualitas yang dimiliki oleh PT. Griya Miesejati, Apple Inc, dan Google LLC maka pengguna akan bertanggung jawab sepenuhnya atas Tindakan tersebut dan akan bersedia untuk dilakukan penyelidikan, pembelaan, dan penyelesaian terhadap kasus pelanggaran hak intelektualias yang terjadi.</string>
    <string name="sanggah">Sanggahan</string>
    <string name="lisen">Lisensi Pengguna</string>
    <string name="pisah">Keterpisahan</string>
    <string name="terima">Saya menerima syarat dan ketentuannya</string>
    <string name="next">Lanjut</string>
    <string name="tanggung">Tanggung Jawab</string>
    <string name="kettanggung">Bakmi GM bertanggung jawab kepada pengguna atas penggunaan aplikasi yang sehubungan dengan hal-hal berikut ini :</string>
    <string name="kettanggung1">1.	Point Member</string>
    <string name="kettanggung11">o	Point member yang tidak masuk pada akun member lebih dari 1 X 24 jam setelah member melakukan transaksi. Bakmi GM hanya akan memproses keluhan member apabila Bakmi GM menerima keluhan poin tidak masuk dari member melalui email help@bgmania.bakmigm.com yang disertai dengan lampiran bukti struk belanja.</string>
    <string name="kettanggung12">o	Point member yang terpotong pada saat melakukan penukaran voucher yang tidak berhasil akibat kegagalan sistem. Hanya berlaku untuk member yang poinnya sudah terpotong tetapi belum mendapatkan kode voucher.</string>
    <string name="kettanggung2">2.	Transaksi member yang tidak terkam pada sistem dikarenakan terbukti akibat dari kelalaian Bakmi GM untuk memasukkan nomor Handphone member yang telah terdaftar pada struk belanja. Bakmi GM akan melakukan penggantian poin member setelah menerima laporan dari member yang disertai dengan bukti struk belanja.</string>
    <string name="kettanggung3">3.	Transaksi member yang tidak terekam pada sistem walaupun telah memasukkan nomor member pada struk belanja. Transaksi dan point akan diproses kedalam sistem sebagai hak member Bakmi GM.</string>
    <string name="kettanggung4">4.	Kewajiban tanggung jawab Bakmi GM hanya sebatas pada penggantian voucher atau poin pelanggan.</string>
    <string name="appli">Aplikasi dan Konten</string>
    <string name="ketappli">Aplikasi dan seluruh kontenyang terkandung didalamnya dilindungi oleh hak cipta, merk dagang, paten dan rahasia dagang, perjanjian internasional, hukum dan hak kepemilikan lainnya, dan juga memiliki komponen keamanan yang melindungi informasi digital sebagaimana Bakmi GM tentukan.</string>
    <string name="ubah">Perubahan</string>
    <string name="ketubah">Bakmi GM mempunyai hak untuk menambah, mengurangi serta mengubah syarat ketentuan yang berlaku yang berkaitan dengan penggunaan Aplikasi setiap saat sesuai dengan kebijakan Bakmi GM dengan mengganti Kebijakan Privasinya di Aplikasi, Pengguna berhak untuk tetap menggunakan dan memanfaatkan aplikasi sebagai mana mestinya.</string>
    <string name="bijakgm">Kebijakan Privasi Bakmi GM</string>
    <string name="ketbijakgm1">Dengan menggunakan Aplikasi Bakmi GM dan memberikan kami data pribadi Anda berarti Anda telah menerima semua yang berlaku dalam Pernyataan Privasi ini. Kami mohon untuk tidak menyerahkan data pribadi Anda jika Anda tidak setuju dengan Sebagian atau keseluruhan isi dari Ketentuan Privasi ini. </string>
    <string name="ketbijakgm2">Bakmi GM berhak untuk mengubah pernyataan Privasi ini secara berkala. Kami menyarankan agar membaca pernyataan privasi ini secara berkala guna memastikan agar ketentuan privasi ini sesuai dengan yang Anda kehendaki serrta bagaimana data pribadi Anda akan diproses. </string>
    <string name="kumpul">Pengumpulan Data</string>
    <string name="ket1kumpul">Pengguna Mobile Aplikasi memberikan data pribadi kepada pihak Bakmi GM dengan suka rela yang mencakup :</string>
    <string name="ket1kumpul1">1.	Informasi yang Anda berikan saat melakukan registrasi</string>
    <string name="ket1kumpul2">2.	Informasi yang kami dapatkan Ketika Anda melengkapi Profil Anda di Aplikasi</string>
    <string name="ket1kumpul3">3.	Informasi yang kami dapatkan dari Anda pada saat penggunaan Aplikasi ataupun Ketika Anda melakukan transaksi di Store Bakmi GM</string>
    <string name="ket1kumpul4">4.	Informasi yang kami dapatkan dari sumber lain.</string>
    <string name="ket2kumpul">Data yang diminta untuk melakukan registrasi adalaha Nama, Nomer Handphone, Tanggal Lahir, Jenis Kelamin, Alamat dan data pribadi lainnya yang mendukung proses operasional pada aplikasi ini. </string>
    <string name="ket3kumpul">Selain Nama, Nomor Handphone, Tanggal Lahir, Jenis Kelamin, dan Alamat pengguna berhak memilih untuk mengisi data pribadi lainnya atau tidak. Namun hal ini akan memberikan perbedaan pada layanan atau informasi yang akan didapatkan antara ppengguna yang tidak mengisi lengkap data dirinya. Informasi terkair dengan data personal yang dikirimkan ke aplikasi ini tidak diperjualbelikan atau diserahkan kepada pihak yang tidak terlibat dalam operasional aplikasi ini. </string>
    <string name="bagidata">Bagaimana Kami Membagi Data Anda</string>
    <string name="ket1bagidata">Ada beberapa situasi yang menyebabkan kami akan membagi data Anda kepada pihak lain, yaitu:</string>
    <string name="ket1bagidata1">1.	Kepada penyedia jasa layanan untuk keperluan Marketing</string>
    <string name="ket1bagidata11">Pihak ketiga kami, yaitu yang menyediakan jasa layanan dan mengembangkan sistem aplikasi kami memegang dan memiliki data Anda untuk keperluan promosi, event atau kegiatan marketing lainnya untuk Anda.</string>
    <string name="ket1bagidata2">2. Transaksi Bisnis</string>
    <string name="kadotulis">Lengkapi profil dan dapatkan kesempatan bermain putar roda sekali lagi untuk memenangkan hadiah menarik</string>
    <string name="AP">ATUR PROFIL</string>
    <string name="LEWAT">LEWATI</string>
    <string name="PP">PENGATURAN PROFIL</string>
    <string name="ME">Masukkan E-mail</string>
    <string name="JK">Jenis Kelamin</string>
    <string name="PR">PRIA</string>
    <string name="WN">WANITA</string>
    <string name="Kot">Kota</string>
    <string name="Alam">Alamat</string>
    <string name="MA">Masukkan Alamat</string>
    <string name="KP">Kode Pos</string>
    <string name="sel">Selesai</string>
</resources>