<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Syarat"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/textView_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20dp"
            android:textColor="#423C3C"
            android:fontFamily="sans-serif"/>
    </androidx.appcompat.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:layout_marginLeft="4dp"
                android:orientation="vertical"
                android:background="@color/white">
                <TextView
                    android:id="@+id/sy"
                    android:layout_marginLeft="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="14dp"
                    android:textStyle="bold"
                    android:text="@string/syagm"/>

                <TextView
                    android:id="@+id/ketsy"
                    android:layout_marginLeft="5dp"
                    android:layout_below="@id/sy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="14dp"
                    android:text="@string/keterangan1"/>

                <TextView
                    android:id="@+id/sa"
                    android:layout_marginLeft="5dp"
                    android:layout_below="@id/ketsy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:textSize="14dp"
                    android:textStyle="bold"
                    android:text="@string/sanggah"/>

                <TextView
                    android:id="@+id/ketsa"
                    android:layout_marginLeft="5dp"
                    android:layout_below="@id/sy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="14dp"
                    android:text="@string/keterangan2"/>
                <TextView
                    android:id="@+id/ketsa2"
                    android:layout_marginLeft="5dp"
                    android:layout_below="@id/ketsa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="14dp"
                    android:text="@string/ket2"/>

                <TextView
                    android:id="@+id/li"
                    android:layout_marginLeft="5dp"
                    android:layout_below="@id/ketsa2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:textSize="14dp"
                    android:textStyle="bold"
                    android:text="@string/lisen"/>
                <TextView
                    android:id="@+id/ketli1"
                    android:layout_marginLeft="5dp"
                    android:layout_below="@id/ketsa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="14dp"
                    android:text="@string/ket3"/>
                <TextView
                    android:id="@+id/ketli2"
                    android:layout_marginLeft="5dp"
                    android:layout_below="@id/ketsa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="14dp"
                    android:text="@string/ket4"/>
                <TextView
                    android:id="@+id/ketli3"
                    android:layout_marginLeft="5dp"
                    android:layout_below="@id/ketsa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="14dp"
                    android:text="@string/ket5"/>

                <TextView
                    android:id="@+id/guna"
                    android:layout_marginLeft="5dp"
                    android:layout_below="@id/ketli3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:textSize="14dp"
                    android:textStyle="bold"
                    android:text="@string/boldguna"/>
                <TextView
                    android:id="@+id/ketguna"
                    android:layout_marginLeft="5dp"
                    android:layout_below="@id/guna"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="14dp"
                    android:text="@string/ketguna"/>
                <TextView
                    android:id="@+id/ketguna1"
                    android:layout_marginLeft="5dp"
                    android:layout_below="@id/ketguna"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="14dp"
                    android:text="@string/ketguna1"/>
                <TextView
                    android:id="@+id/ketguna2"
                    android:layout_marginLeft="5dp"
                    android:layout_below="@id/ketguna1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="14dp"
                    android:text="@string/ketguna2"/>
                <TextView
                    android:id="@+id/ketguna3"
                    android:layout_marginLeft="5dp"
                    android:layout_below="@id/ketguna2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="14dp"
                    android:text="@string/ketguna3"/>
                <TextView
                    android:id="@+id/ketguna4"
                    android:layout_marginLeft="5dp"
                    android:layout_below="@id/ketguna3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="14dp"
                    android:text="@string/ketguna4"/>
                <TextView
                    android:id="@+id/ketguna5"
                    android:layout_marginLeft="5dp"
                    android:layout_below="@id/ketguna4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="14dp"
                    android:text="@string/ketguna5"/>

                <TextView
                    android:id="@+id/tnggungjwb"
                    android:layout_marginLeft="5dp"
                    android:layout_below="@id/ketguna5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:textSize="14dp"
                    android:textStyle="bold"
                    android:text="@string/tanggung"/>
                <TextView
                    android:id="@+id/kettnggung"
                    android:layout_marginLeft="5dp"
                    android:layout_below="@id/tnggungjwb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="14dp"
                    android:text="@string/kettanggung"/>
                <TextView
                    android:id="@+id/kettnggung1"
                    android:layout_marginLeft="5dp"
                    android:layout_below="@id/kettnggung"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="14dp"
                    android:text="@string/kettanggung1"/>
                <TextView
                    android:id="@+id/kettnggung11"
                    android:layout_marginLeft="5dp"
                    android:layout_below="@id/kettnggung1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="14dp"
                    android:text="@string/kettanggung11"/>
                <TextView
                    android:id="@+id/kettnggung12"
                    android:layout_marginLeft="5dp"
                    android:layout_below="@id/kettnggung11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="14dp"
                    android:text="@string/kettanggung12"/>
                <TextView
                    android:id="@+id/kettnggung2"
                    android:layout_marginLeft="5dp"
                    android:layout_below="@id/kettnggung12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="14dp"
                    android:text="@string/kettanggung2"/>
                <TextView
                    android:id="@+id/kettnggung3"
                    android:layout_marginLeft="5dp"
                    android:layout_below="@id/kettnggung2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="14dp"
                    android:text="@string/kettanggung3"/>
                <TextView
                    android:id="@+id/kettnggung4"
                    android:layout_marginLeft="5dp"
                    android:layout_below="@id/kettnggung3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="14dp"
                    android:text="@string/kettanggung4"/>

                <TextView
                    android:id="@+id/appdan"
                    android:layout_marginLeft="5dp"
                    android:layout_below="@id/kettnggung4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:textSize="14dp"
                    android:textStyle="bold"
                    android:text="@string/appli"/>
                <TextView
                    android:id="@+id/ketappdan"
                    android:layout_marginLeft="5dp"
                    android:layout_below="@id/appdan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="14dp"
                    android:text="@string/ketappli"/>

                <TextView
                    android:id="@+id/rubah"
                    android:layout_marginLeft="5dp"
                    android:layout_below="@id/ketappdan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:textSize="14dp"
                    android:textStyle="bold"
                    android:text="@string/ubah"/>
                <TextView
                    android:id="@+id/ketrubah"
                    android:layout_marginLeft="5dp"
                    android:layout_below="@id/rubah"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textSize="14dp"
                    android:text="@string/ketubah"/>

                <TextView
                    android:id="@+id/ke"
                    android:layout_marginLeft="5dp"
                    android:layout_below="@id/ketrubah"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:textSize="14dp"
                    android:textStyle="bold"
                    android:text="@string/pisah"/>
                <TextView
                    android:id="@+id/ketke"
                    android:layout_marginLeft="5dp"
                    android:layout_below="@id/ketsa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="20dp"
                    android:textSize="14dp"
                    android:text="@string/ket6"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>